# context-sensitive-reachability

./: .gitignore  AbstractQuery.h  CMakeLists.txt  DWGraph.cpp  DWGraph.h  DWGraphUtil.cpp  DWGraphUtil.h  DataComp.cpp  DataComp.h  ExceptionList.h  ExceptionListIncrementalBase.h  ExceptionListIncrementalPlus.h  Grail.cpp  Grail.h  Graph.cpp  Graph.h  GraphUtil.cpp  GraphUtil.h  PathTree.cpp  PathTree.h  PathtreeQuery.cpp  PathtreeQuery.h  ProgressBar.cpp  ProgressBar.h  Query.cpp  Query.h  README.md  ReachBackbone.cpp  ReachBackbone.h  Tabulation.cpp  Tabulation.h  bit_vector.cpp  bit_vector.h  main.cpp
dataset/: bzip2.txt  gzip.txt  mcf.txt
